--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,3 +1,3 @@
-<link rel="shortcut icon" href="{{ '/assets/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
-<link rel="icon" href="{{ '/assets/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
+<link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+<link rel="icon" href="{{ '/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
 <meta name="referrer" content="no-referrer">
