--- a/_sass/milligram/_Color.scss
+++ b/_sass/milligram/_Color.scss
@@ -11,7 +11,8 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 $color-initial: #fff !default;
-$color-primary: #9b4dca !default;
+// Outline of grid
+$color-primary: #1b3a4b !default;
 $color-secondary: #606c76 !default;
 $color-tertiary: #f4f5f6 !default;
 $color-quaternary: #d1d1d1 !default;
