--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,10 @@
 ---
 @charset "utf-8";
 
-$grey-color:       #828282;
+$grey-color:       #1b3a4b;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$bg-color: pink;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
