--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@
  * Icons
  */
 .icon {
-
+    margin-right: 10px;
     > svg {
         display: inline-block;
         width: 24px;
@@ -11,6 +11,20 @@
 
         path {
             fill: $color-secondary;
+            pointer-events:all;
+        }
+    }
+}
+
+.icon:hover {
+    > svg {
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        vertical-align: middle;
+
+        path {
+            fill: url(#MyGradient);
         }
     }
 }
