--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,11 @@
 ---
 @charset "utf-8";
 
-$grey-color:       #1b3a4b;
+$grey-color:       #ee32bf;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
-$bg-color: pink;
+$bg-color: #302e35;
+$cadre-color: #00a6ff;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
