--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,10 @@ body {
     background-color: $bg-color;
 }
 
+p {
+    text-align: justify;
+}
+
  .wrapper .container {
     max-width: 80rem;
 }
@@ -33,6 +37,12 @@ body {
     border-image: linear-gradient(97deg, rgba(255,173,173,1) 0%, rgba(255,214,165,1) 13%, rgba(253,255,182,1) 28%, rgba(202,255,191,1) 45%, rgba(155,246,255,1) 62%, rgba(160,196,255,1) 76%, rgba(175,187,255,1) 89%, rgba(255,198,255,1) 100%) 1 stretch;
     
 }
+
+.line{
+    border-bottom: 1px solid red;
+    border-image: linear-gradient(97deg, rgba(255,173,173,1) 0%, rgba(255,214,165,1) 13%, rgba(253,255,182,1) 28%, rgba(202,255,191,1) 45%, rgba(155,246,255,1) 62%, rgba(160,196,255,1) 76%, rgba(175,187,255,1) 89%, rgba(255,198,255,1) 100%) 1 stretch;
+    margin-bottom: 20px;
+    }
 
 .post-title {
     display: block;
